--- a/week02/styles/temple.css
+++ b/week02/styles/temple.css
@@ -28,7 +28,7 @@ h1 {
 }
 
 h2 {
-   border: 1px solid #222; 
+   border-bottom: 1px solid #222; 
 }
 
 img {
@@ -53,5 +53,5 @@ ul {
     margin: 10px 20px;
 }
 footer {
-    font-size: .90rem;
+    font-size: .9rem;
 }
